--- a/VG Music Studio/Properties/Strings.resx
+++ b/VG Music Studio/Properties/Strings.resx
@@ -373,4 +373,7 @@
     <value>VoiceTable saved to {0}.</value>
     <comment>{0} is the file name.</comment>
   </data>
+  <data name="MenuExportAllWAV" xml:space="preserve">
+    <value>Export All WAV</value>
+  </data>
 </root>
